# surfflow

./: LICENSE  README.md
bruno/: opencollection.yml
bruno/elasticsearch/: cluster health.yml  folder.yml  home.yml  indices.yml  local_files _analyze - ik_smart.yml  local_files _analyze - keyword field.yml  local_files _analyze - text field.yml  local_files doc count.yml  local_files index - create.yml  local_files index - delete.yml  local_files index.yml  local_files mapping.yml  local_files search.yml  local_files settings.yml
bruno/firefox/: folder.yml
bruno/local_api/: Docs.yml  Homepage.yml  file action - archive.yml  file action - copy path.yml  file action - open.yml  file action - reveal.yml  folder.yml  reveal file in finder.yml
cli/: pyproject.toml
cli/src/surfflow_cli/: __init__.py
extension/: amazon.js  api.js  background.js  douban.js  manifest.json  page_context.js  popup.html  popup.js
extension/commons/: tabs.js  texts.js
extension/providers/: amazon.js  douban.js
server/: pyproject.toml
server/deploy/: Dockerfile  docker-compose.yaml  logs.md
server/deploy/db/: sqlite.sql
server/src/surfflow_server/: __init__.py  config.py  main.py
server/src/surfflow_server/clients/: elastic_client.py
server/src/surfflow_server/data/mappings/: local_files.json
server/src/surfflow_server/data_access/: database.py  firefox_history.py  operation_log.py
server/src/surfflow_server/embedders/: embedding_caches.py  text_embedders.py
server/src/surfflow_server/handlers/: book_handler.py  ff_history_handler.py  operation_log_handler.py
server/src/surfflow_server/readers/: collectors.py
server/src/surfflow_server/schemas/: __init__.py  books.py  files.py  firefox.py  local_finder.py  searchers.py
server/src/surfflow_server/searchers/: base.py
server/src/surfflow_server/templates/: index.html
