[project]
name = "surfflow-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andersc", email = "anderscui@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
surfflow-cli = "surfflow_cli:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
