[project]
name = "surfflow-server"
version = "0.1.0"
description = "SurfFlow backend APIs."
readme = "README.md"
authors = [
    { name = "andersc", email = "anderscui@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.4.1",
    "fastapi>=0.138.2",
    "humanize>=4.16.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "markdown-it-py>=4.2.0",
    "mutagen>=1.48.1",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pillow-heif>=1.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "tiktoken>=0.13.0",
    "toolz>=1.1.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
surfflow-server = "surfflow_server:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
